# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: release.yml
docs/: claude-agent-sdk.md
src/kelet/: __init__.py  _config.py  _configure.py  _context.py  _signal.py  _temporal_detect.py  json_encoder.py  models.py  temporal.py  test_agent_context.py  test_configure.py  test_json_encoder.py
src/kelet/_integrations/: __init__.py
src/kelet/_integrations/claude_agent_sdk/: __init__.py  _instrumentor.py  _reasoning_observer.py
tests/: conftest.py  test_auto_instrument.py  test_config.py  test_context.py  test_context_integration.py  test_drain.py  test_signal.py  test_temporal.py
tests/claude_agent_sdk/: test_instrumentor.py  test_reasoning_observer.py
