[project]
name = "kelet"
version = "1.2.1"
description = "Kelet SDK - OpenTelemetry integration for AI observability"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.10.6",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai>=0.1.0"]
# Keep pandas as optional for backward compatibility with examples
pandas = ["pandas>=2.2.3"]
anthropic = ["openinference-instrumentation-anthropic"]
openai = ["openinference-instrumentation-openai"]
langchain = ["openinference-instrumentation-langchain"]
all = [
    "openinference-instrumentation-anthropic",
    "openinference-instrumentation-openai",
    "openinference-instrumentation-langchain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
log_cli = true

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pyright>=1.1.401",
    "load-dotenv>=0.1.0",
    "openai>=1.77.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "breaking", "chore", "docs", "style", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore",
    "^docs",
    "^style",
    "^ci",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
build_command = """
uv lock --upgrade-package kelet
git add uv.lock
uv build
"""
